improve code documentation and make use of private methods
